<resources>
    <string name="app_name">Contacts</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="primarynumber">Primary Number</string>
    <string name="secondaryNumber">Secondary Number</string>
    <string name="emailId">"Email"</string>
    <string name="icon">Icon</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="openNavigation">Open Navigation Drawer</string>
    <string name="closeNavigation">Close Navigation Drawer</string>
    <string name="settings">Settings</string>
    <string name="import_contacts">Import</string>
    <string name="export_contacts">Export</string>
    <string name="sort_by">Sort By</string>
    <string name="contacts">Contacts</string>
    <string name="sim_contacts">SIM Contacts</string>
    <string name="groups">Groups</string>
</resources>
