<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/contact_menu_item"
        android:icon="@drawable/icon_account_circle"
        android:title="@string/contacts" />
    <item
        android:id="@+id/sim_menu_item"
        android:icon="@drawable/icon_sim_card_black"
        android:title="@string/sim_contacts" />

    <item
        android:icon="@drawable/icon_group"
        android:title="@string/groups">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/family_menu_item"
                    android:title="Family" />
                <item
                    android:id="@+id/friends_menu_item"
                    android:title="Friends" />
            </group>
        </menu>
    </item>
    <item android:title="Misc">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/import_menu_item"
                    android:icon="@drawable/icon_import_export"
                    android:title="@string/import_contacts" />
                <item
                    android:id="@+id/export_menu_item"
                    android:icon="@drawable/icon_import_export"
                    android:title="@string/export_contacts" />
               <!-- <item
                    android:id="@+id/sort_menu_item"
                    android:icon="@drawable/icon_sort"
                    android:title="@string/sort_by" />-->
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings" />
</menu>
