<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:strokeColor="@color/secondaryColor"
    app:strokeWidth="0.5dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/primaryLightColor"
        app:cardCornerRadius="100dp">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account_circle_black_24dp"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/materialCardView"
        android:maxLines="1"
        android:text="@string/firstname"
        android:layout_alignBaseline="@+id/lastname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryLightColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:layout_toEndOf="@+id/firstname"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/lastname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryLightColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
        android:layout_toEndOf="@+id/materialCardView"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/primarynumber"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondaryDarkColor"
        android:layout_toStartOf="@+id/edit_contact_icon"/>

    <TextView
        android:id="@+id/secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/primary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toEndOf="@+id/materialCardView"
        android:layout_toStartOf="@+id/edit_contact_icon"
        android:text="@string/secondaryNumber"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondaryDarkColor"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/materialCardView"
        android:layout_toStartOf="@+id/edit_contact_icon"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/emailId"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondaryDarkColor"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/delete_contact"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_delete_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        />

    <ImageView
        android:id="@+id/edit_contact_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/delete_contact"
        android:src="@drawable/ic_mode_edit_black_24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_centerVertical="true"
        />


</RelativeLayout>



</com.google.android.material.card.MaterialCardView>